--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -33,7 +33,6 @@
 }
 
 .categories__heading {
-  margin-bottom: 0.5rem;
   font-size: 2.5rem;
 }
 
@@ -73,10 +72,20 @@
 }
 
 .categories__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: rgb(27, 154, 208);
+  border-radius: 2rem;
+  box-shadow: 0 2px 6px 0px rgb(181, 180, 180);
+  text-shadow: 3px 3px 3px rgb(147, 193, 61);
   min-width: 300px;
   height: 200px;
-  background-color: rgb(171, 171, 171);
+  background-color: rgb(255, 255, 255);
   margin: 0 20px;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .categories__item:first-child {
@@ -88,7 +97,7 @@
 }
 
 .products {
-  margin-top: 1.5rem;
+
 }
 
 .products__heading {
@@ -98,15 +107,58 @@
 
 .products__grid-list {
   display: grid;
-  grid-template-rows: repeat(4, 500px);
+  grid-template-rows: repeat(2, 500px);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: 500px;
   grid-gap: 1rem 2rem;
 }
 
 .products__item {
-  background-color: aliceblue;
-  border: 2px solid burlywood;
+  text-align: center;
+  box-shadow: 0 0 3px 1px rgb(147, 193, 61);
+  position: relative;
+  background-color: rgb(234, 248, 210);
+  cursor: pointer;
+  /* border: 1px solid rgb(147, 193, 61); */
+  /* color: white; */
+  /* background-color: aliceblue; */
+  /* border: 2px solid burlywood; */
+}
+.products__item-title {
+  
+}
+.products__item-name {
+  font-size: 2rem;
+}
+.products__item-price {
+  color: rgb(27, 154, 208);
+  font-size: 1.2rem;
+  font-weight: 900;
+}
+.products__item-description {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.products__item-add-to-cart-btn {
+  background-color: rgb(147, 193, 61);
+  color: white;
+  width: 100%;
+  height: 10%;
+  /* background-color: black; */
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products__item > img{
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  box-shadow: 0 0 3px 1px rgb(217, 217, 217);
 }
 
 @media only screen and (max-device-width: 480px) {
